@@ -1,20 +1,26 @@
 import com.gu.riffraff.artifact.RiffRaffArtifact
 import com.gu.riffraff.artifact.RiffRaffArtifact.autoImport._
+import com.typesafe.sbt.packager.archetypes.systemloader.ServerLoader.Systemd
 import play.sbt.PlayImport.PlayKeys._
 import sbt.Keys.libraryDependencies
 
-// common settings (apply to all projects)
-organization in ThisBuild := "com.gu"
-version in ThisBuild := "0.2.0"
-scalaVersion in ThisBuild := "2.12.10"
-scalacOptions in ThisBuild ++= Seq("-deprecation", "-feature", "-unchecked", "-target:jvm-1.8", "-Xfatal-warnings")
+import scala.concurrent.duration.DurationInt
 
-// resolvers += "guardian-bintray" at "https://dl.bintray.com/guardian/sbt-plugins/"
+// common settings (apply to all projects)
+ThisBuild / organization := "com.gu"
+ThisBuild / version := "0.2.0"
+ThisBuild / scalaVersion := "2.13.8"
+ThisBuild / scalacOptions ++= Seq("-deprecation", "-feature", "-unchecked", "-Xfatal-warnings")
+
 resolvers += DefaultMavenRepository
 
 val awsSdkVersion = "1.11.596"
-val playVersion = "2.8.1"
-val jacksonVersion = "2.10.1"
+val playJsonVersion = "2.8.1"
+val jacksonVersion = "2.12.3"
+
+// Until all dependencies are on scala-java8-compat v1.x, this avoids unnecessary fatal eviction errors
+// See https://github.com/akka/akka/pull/30375
+ThisBuild / libraryDependencySchemes += "org.scala-lang.modules" %% "scala-java8-compat" % VersionScheme.Always
 
 lazy val hq = (project in file("hq"))
   .enablePlugins(PlayScala, RiffRaffArtifact, SbtWeb, JDebPackaging, SystemdPlugin)
@@ -26,10 +32,12 @@ lazy val hq = (project in file("hq"))
     libraryDependencies ++= Seq(
       ws,
       filters,
-      "com.gu" %% "play-googleauth" % "0.7.6",
+      "com.gu.play-googleauth" %% "play-v28" % "2.2.2",
+      "com.gu.play-secret-rotation" %% "play-v28" % "0.33",
+      "com.gu.play-secret-rotation" %% "aws-parameterstore-sdk-v1" % "0.33",
       "joda-time" % "joda-time" % "2.10.5",
       "org.typelevel" %% "cats-core" % "2.0.0",
-      "com.github.tototoshi" %% "scala-csv" % "1.3.5",
+      "com.github.tototoshi" %% "scala-csv" % "1.3.10",
       "com.amazonaws" % "aws-java-sdk-s3" % awsSdkVersion,
       "com.amazonaws" % "aws-java-sdk-iam" % awsSdkVersion,
       "com.amazonaws" % "aws-java-sdk-sts" % awsSdkVersion,
@@ -41,72 +49,84 @@ lazy val hq = (project in file("hq"))
       "com.amazonaws" % "aws-java-sdk-dynamodb" % awsSdkVersion,
       "com.vladsch.flexmark" % "flexmark" % "0.62.2",
       "com.amazonaws" % "aws-java-sdk-sns" % awsSdkVersion,
-      "io.reactivex" %% "rxscala" % "0.26.5",
+      "com.amazonaws" % "aws-java-sdk-ssm" % awsSdkVersion,
+      "io.reactivex" %% "rxscala" % "0.27.0",
       "com.fasterxml.jackson.core" % "jackson-databind" % jacksonVersion,
-      "com.google.cloud" % "google-cloud-securitycenter" % "1.3.6",
-      "org.quartz-scheduler" % "quartz" % "2.3.2",
-      "org.scalatestplus.play" %% "scalatestplus-play" % "3.1.2" % Test,
-      "org.scalacheck" %% "scalacheck" % "1.13.4" % Test,
-      "com.github.alexarchambault" %% "scalacheck-shapeless_1.13" % "1.1.6" % Test,
-      "com.gu" % "anghammarad-client_2.12" % "1.1.2",
+      "com.fasterxml.jackson.module" %% "jackson-module-scala" % jacksonVersion,
+      "com.google.cloud" % "google-cloud-securitycenter" % "2.5.1",
+      "org.scalatest" %% "scalatest" % "3.2.11" % Test,
+      "org.scalatestplus" %% "scalacheck-1-15" % "3.2.11.0" % Test,
+      "org.scalacheck" %% "scalacheck" % "1.15.4" % Test,
+      "com.github.alexarchambault" %% "scalacheck-shapeless_1.15" % "1.3.0" % Test,
+      "com.gu" %% "anghammarad-client" % "1.2.0",
 
       // logstash-logback-encoder brings in version 2.11.0
       // exclude transitive dependency to avoid a runtime exception:
       // `com.fasterxml.jackson.databind.JsonMappingException: Scala module 2.10.2 requires Jackson Databind version >= 2.10.0 and < 2.11.0`
       "net.logstash.logback" % "logstash-logback-encoder" % "6.4" exclude("com.fasterxml.jackson.core", "jackson-databind"),
       "com.gu" % "kinesis-logback-appender" % "1.4.4",
-      "com.gu" %% "janus-config-tools" % "0.0.4",
+      "com.gu" %% "janus-config-tools" % "0.0.5"
     ),
-    pipelineStages in Assets := Seq(digest),
+    Assets / pipelineStages := Seq(digest),
     // exclude docs
-    sources in (Compile,doc) := Seq.empty,
-    packageName in Universal := "security-hq",
+    Compile / doc / sources := Seq.empty,
+    Universal / packageName := "security-hq",
     // include beanstalk config files in the zip produced by `dist`
-    mappings in Universal ++=
+    Universal / mappings ++=
       (baseDirectory.value / "beanstalk" * "*" get)
         .map(f => f -> s"beanstalk/${f.getName}"),
     // include upstart config files in the zip produced by `dist`
-    mappings in Universal ++=
+    Universal / mappings ++=
       (baseDirectory.value / "upstart" * "*" get)
         .map(f => f -> s"upstart/${f.getName}"),
     // include systemd config files in the zip produced by `dist`
-    mappings in Universal ++=
+    Universal / mappings ++=
       (baseDirectory.value / "systemd" * "*" get)
         .map(f => f -> s"systemd/${f.getName}"),
-    unmanagedResourceDirectories in Compile += baseDirectory.value / "markdown",
-    unmanagedSourceDirectories in Test += baseDirectory.value / "test" / "jars",
-    parallelExecution in Test := false,
-    fork in Test := false,
-    dynamoDBLocalDownloadDir := baseDirectory.value / "test" / "jars" / "dynamodb-local",
-    dynamoDBLocalDownloadUrl :=
-      Some(s"https://s3.eu-central-1.amazonaws.com/dynamodb-local-frankfurt/dynamodb_local_${dynamoDBLocalVersion.value}.tar.gz"),
-    startDynamoDBLocal in Test := startDynamoDBLocal.dependsOn(compile in Test).value,
-    test in Test := (test in Test).dependsOn(startDynamoDBLocal).value,
-    testOnly in Test := (testOnly in Test).dependsOn(startDynamoDBLocal).evaluated,
-    testQuick in Test := (testQuick in Test).dependsOn(startDynamoDBLocal).evaluated,
-    testOptions in Test += dynamoDBLocalTestCleanup.value,
-    riffRaffPackageType := (packageBin in Debian).value,
+    Compile / unmanagedResourceDirectories += baseDirectory.value / "markdown",
+    Test / unmanagedSourceDirectories += baseDirectory.value / "test" / "jars",
+    Test / parallelExecution := false,
+    Test / fork := false,
+
+    // start DynamoDB on run
+    dynamoDBLocalDownloadDir := file(".dynamodb-local"),
+    dynamoDBLocalPort := 8000,
+    dynamoDBLocalDownloadIfOlderThan := 14.days,
+    startDynamoDBLocal := startDynamoDBLocal.dependsOn(Compile / compile).value,
+    Compile / run := (Compile / run).dependsOn(startDynamoDBLocal).evaluated,
+    dynamoDBLocalSharedDB := true,
+    dynamoDBLocalInMemory := false,
+    dynamoDBLocalDBPath := Some(System.getProperty("user.home") ++ "/.gu/security-hq"),
+
+    Debian / serverLoading := Some(Systemd),
+    debianPackageDependencies := Seq("java-11-amazon-corretto-jdk:arm64"),
+    maintainer := "Security Team <devx.sec.ops@guardian.co.uk>",
+    packageSummary := "Security HQ app.",
+    packageDescription := """Deb for Security HQ - the Guardian's service to centralise security information for our AWS accounts.""",
+    riffRaffPackageType := (Debian / packageBin).value,
     riffRaffUploadArtifactBucket := Option("riffraff-artifact"),
     riffRaffUploadManifestBucket := Option("riffraff-builds"),
+
     riffRaffAddManifestDir := Option("hq/public"),
     riffRaffArtifactResources  := Seq(
       riffRaffPackageType.value -> s"${name.value}/${name.value}.deb",
       baseDirectory.value / "conf" / "riff-raff.yaml" -> "riff-raff.yaml",
-      file("cloudformation/security-hq.template.yaml") -> s"${name.value}-cfn/cfn.yaml"
+      file("cdk/cdk.out/security-hq.template.json") -> s"${name.value}-cfn/cfn.json",
+      file("cdk/cdk.out/security-vpc.template.json") -> s"security-vpc-cfn/cfn.json"
     ),
-    javaOptions in Universal ++= Seq(
+
+    Universal / javaOptions ++= Seq(
       "-Dpidfile.path=/dev/null",
       "-Dconfig.file=/etc/gu/security-hq.conf",
       "-J-XX:+UseCompressedOops",
       "-J-XX:+UseConcMarkSweepGC",
       "-J-XX:NativeMemoryTracking=detail",
-      "-J-XX:MaxRAMFraction=2",
-      "-J-XX:InitialRAMFraction=2",
+      "-J-XX:MaxRAMPercentage=50",
+      "-J-XX:InitialRAMPercentage=50",
       "-XX:NewRatio=3",
       "-J-XX:MaxMetaspaceSize=300m",
-      "-J-XX:+PrintGCDetails",
-      "-J-XX:+PrintGCDateStamps",
-      s"-J-Xloggc:/var/log/${packageName.value}/gc.log"
+      "-J-Xlog:gc*",
+      s"-J-Xlog:gc:/var/log/${packageName.value}/gc.log"
     )
 
   )
@@ -114,8 +134,10 @@ lazy val hq = (project in file("hq"))
 // More will go here!
 
 lazy val commonLambdaSettings = Seq(
-  topLevelDirectory in Universal := None
+  Universal / topLevelDirectory := None
 )
+// exclude this key from the linting (unused keys) as it is incorrectly flagged
+Global / excludeLintKeys += Universal / topLevelDirectory
 
 lazy val lambdaCommon = (project in file("lambda/common")).
   settings(commonLambdaSettings: _*).
@@ -131,8 +153,8 @@ lazy val lambdaCommon = (project in file("lambda/common")).
       "com.amazonaws" % "aws-java-sdk-sns" % awsSdkVersion,
       "com.amazonaws" % "aws-java-sdk-sts" % awsSdkVersion,
       "com.amazonaws" % "aws-java-sdk-s3" % awsSdkVersion,
-      "org.scalatest" %% "scalatest" % "3.0.5" % Test,
-      "com.typesafe.play" %% "play-json" % playVersion,
+      "org.scalatest" %% "scalatest" % "3.2.11" % Test,
+      "com.typesafe.play" %% "play-json" % playJsonVersion,
       "com.typesafe.scala-logging" %% "scala-logging" % "3.9.2",
       "ch.qos.logback" %  "logback-classic" % "1.2.3",
       "com.fasterxml.jackson.core" % "jackson-databind" % jacksonVersion
@@ -144,9 +166,9 @@ lazy val lambdaSecurityGroups = (project in file("lambda/security-groups")).
   dependsOn(lambdaCommon % "compile->compile;test->test").
   settings(
     name := """securitygroups-lambda""",
-    assemblyJarName in assembly := s"${name.value}-${version.value}.jar",
+    assembly / assemblyJarName := s"${name.value}-${version.value}.jar",
     libraryDependencies ++= Seq(
-      "com.gu" % "anghammarad-client_2.12" % "1.1.0"
+      "com.gu" %% "anghammarad-client" % "1.2.0"
     )
 )
 
